--- a/.dev.env
+++ b/.dev.env
@@ -2,6 +2,8 @@
 SECRET_KEY=8468%sfe92stu=2bgnn_1rkbhpll)#!cq*(-lk2m_-@^k91o0e
 DEBUG=True
 ALLOWED_HOSTS=*;http://dev.local.host;https://dev.local.host
+CORS_ALLOWED_ORIGINS=http://dev.local.host-http://front.local.host-http://localhost:3000-http://localhost:8000-http://127.0.0.1:3000-http://127.0.0.1:8000
+CORS_ALLOW_METHODS=GET-POST-PUT-PATCH-DELETE-OPTIONS
 
 # Django Database
 DB_ENGINE=django.db.backends.postgresql_psycopg2
