--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,17 @@ version: '2.17.3'
 
 volumes:
   datavol:
+    external: true
   static:
+    external: true
   prod_static:
+    external: true
   media:
+    external: true
 
-# networks:
-#   frontend:
-#   backend:
+networks:
+  development:
+    external: true
 
 services:
 
@@ -28,6 +32,8 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.rule=Host(`dash.local.host`)"
+    networks:
+      - development
     restart: always
 
   application:
@@ -36,7 +42,7 @@ services:
     volumes:
       - static:/app/static
       - media:/app/media
-      - prod_static:/app/statics:rw
+      - prod_static:/app/statics
     env_file:
       - ./.dev.env
     labels:
@@ -47,6 +53,8 @@ services:
       replicas: 1
     depends_on:
       - database
+    networks:
+      - development
     restart: always
 
   database:
@@ -56,22 +64,26 @@ services:
       - datavol:/var/lib/postgresql/data
     env_file:
       - ./database/.database.env
+    networks:
+      - development
     restart: always
 
-  nginx:
-    image: nginx:stable-alpine
-    container_name: nginx
-    volumes:
-      - prod_static:/app/static:rw
-      - media:/app/media:rw
-      # - prod_static:/app/statics:rw
-      - ./server/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.nginx.rule=Host(`dev.local.host`) && PathPrefix(`/static`) || PathPrefix(`/media`)"
-    depends_on:
-      - application
-    restart: always
+  # nginx:
+  #   image: nginx:stable-alpine
+  #   container_name: nginx
+  #   volumes:
+  #     - prod_static:/app/static:rw
+  #     - media:/app/media:rw
+  #     # - prod_static:/app/statics:rw
+  #     - ./server/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #   labels:
+  #     - "traefik.enable=true"
+  #     - "traefik.http.routers.nginx.rule=Host(`dev.local.host`) && PathPrefix(`/static`) || PathPrefix(`/media`)"
+  #   depends_on:
+  #     - application
+  #   networks:
+  #     - development
+  #   restart: always
 
   # next:
   #   image: next:app
