--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ autopep8 = "^2.0.2"
 psycopg2-binary = "^2.9.6"
 gunicorn = "^20.1.0"
 django-extensions = "^3.2.1"
+django-filter = "^23.2"
 
 
 [build-system]
