--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ django-cors-headers==3.14.0 ; python_version >= "3.10" and python_version < "4.0
 django-extensions==3.2.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:2a4f4d757be2563cd1ff7cfdf2e57468f5f931cc88b23cf82ca75717aae504a4 \
     --hash=sha256:421464be390289513f86cb5e18eb43e5dc1de8b4c27ba9faa3b91261b0d67e09
+django-filter==23.2 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:2fe15f78108475eda525692813205fa6f9e8c1caf1ae65daa5862d403c6dbf00 \
+    --hash=sha256:d12d8e0fc6d3eb26641e553e5d53b191eb8cec611427d4bdce0becb1f7c172b5
 django==4.2.1 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:066b6debb5ac335458d2a713ed995570536c8b59a580005acb0732378d5eb1ee \
     --hash=sha256:7efa6b1f781a6119a10ac94b4794ded90db8accbe7802281cd26f8664ffed59c
